# Nyl

./: Cargo.toml  README.md
Nyl.xcworkspace/: contents.xcworkspacedata
Nyl.xcworkspace/xcshareddata/swiftpm/: Package.resolved
NylKit/: Package.swift
NylKit/Sources/NylKit/: NylKit.swift
NylKit/Tests/NylKitTests/: NylKitTests.swift
NylMobile/NylMobile/: ContentView.swift  Info.plist  NylAPIService.swift  NylMobileApp.swift  ServerDiscoveryService.swift  WebSocketClient.swift
NylMobile/NylMobile.xcodeproj/: project.pbxproj
NylMobile/NylMobileTests/: NylMobileTests.swift
NylMobile/NylMobileUITests/: NylMobileUITests.swift  NylMobileUITestsLaunchTests.swift
NylServer/NylServer/: AppDelegate.swift  BonjourService.swift  ClaudeClient.swift  ContentView.swift  HeartbeatService.swift  Info.plist  LocalNetworkOnlyMiddleware.swift  NylServer.entitlements  NylServerApp.swift  OllamaClient.swift  ServerService.swift  SettingsService.swift  SettingsView.swift  WeatherService.swift  WebSocketManager.swift
NylServer/NylServer.xcodeproj/: project.pbxproj
NylServer/NylServerTests/: NylServerTests.swift
NylServer/NylServerUITests/: NylServerUITests.swift  NylServerUITestsLaunchTests.swift
src/: app.rs  main.rs  ui.rs
