[package]
name = "Nyl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
crossterm = "0.28"
ratatui = "0.29.0"
tui-textarea = { version = "0.7.0", features = ["crossterm"] }
